# ConstMapper

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: const_mapper.hpp
test/: test_const_mapper.cpp  test_example.cpp  test_performance.cpp  test_utils.cpp
